compiler/typ/tests/fixtures/diagnostics/0121_adt_record_field_int_bool_01.ml.infer.expected
File "0121_adt_record_field_int_bool_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0121_adt_record_field_int_bool_01 is not a valid module name.

File "0121_adt_record_field_int_bool_01.ml", line 2, characters 29-33:
2 | let _ : rec_alpha = { left = true; right = true }
                                 ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
